<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/titlebarbutton" />

            <TextView
                android:id="@+id/currentRoundTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif"
                android:text="@string/currentRound"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/mainScoreLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:context=".MainActivity">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/TeamA"
                    android:textColor="@color/teamAColor"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/teama_image" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="30dp"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/score_display_image" />

                    <TextView
                        android:id="@+id/team_a_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|center"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center_horizontal"
                        android:text="0"
                        android:textColor="@color/teamAColor"
                        android:textSize="55sp"
                        android:textStyle="bold" />

                </FrameLayout>


                <Button
                    android:id="@+id/button1_teamA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:background="@drawable/basic_button"
                    android:onClick="onClickButton"
                    android:text="@string/point3"
                    android:textColor="@color/darkGray"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/button2_teamA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:background="@drawable/basic_button"
                    android:onClick="onClickButton"
                    android:text="@string/point2"
                    android:textColor="@color/darkGray"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/button3_teamA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:background="@drawable/basic_button"
                    android:onClick="onClickButton"
                    android:text="@string/FreeThrow"
                    android:textColor="@color/darkGray"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:context=".MainActivity">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/TeamB"
                    android:textColor="@color/teamBColor"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/teamb_image" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="30dp"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/score_display_image" />

                    <TextView
                        android:id="@+id/team_b_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|center"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center_horizontal"
                        android:text="0"
                        android:textColor="@color/teamBColor"
                        android:textSize="55sp"
                        android:textStyle="bold" />

                </FrameLayout>


                <Button
                    android:id="@+id/button1_teamB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:background="@drawable/basic_button"
                    android:onClick="onClickButton"
                    android:text="@string/point3"
                    android:textColor="@color/darkGray"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/button2_teamB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:background="@drawable/basic_button"
                    android:onClick="onClickButton"
                    android:text="@string/point2"
                    android:textColor="@color/darkGray"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/button3_teamB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:background="@drawable/basic_button"
                    android:onClick="onClickButton"
                    android:text="@string/FreeThrow"
                    android:textColor="@color/darkGray"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mainScoreLayout"
            android:layout_marginTop="50dp"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/nextRoundButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/mainfunctionbutton"
                android:onClick="onClickNextAround"
                android:text="@string/NextAround"
                android:textColor="@color/darkGray"
                android:layout_margin="10dp"
                />

            <Button
                android:id="@+id/resultButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/mainfunctionbutton"
                android:onClick="onClickResult"
                android:text="@string/Result"
                android:textColor="@color/darkGray"
                android:layout_margin="10dp"
                />

            <Button
                android:id="@+id/resetButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/mainfunctionbutton"
                android:onClick="onClickReset"
                android:text="@string/Reset"
                android:textColor="@color/darkGray"
                android:layout_margin="10dp"
                />

        </LinearLayout>


    </RelativeLayout>
</ScrollView>